# smit.studio_test

./: .env.example  .gitignore  README.md  docker-compose.yml
src/: Dockerfile  database.py  entrypoint.sh  main.py  pyproject.toml  settings.py
src/migrations/models/: 1_20230716155110_update.py
src/rates/: models.py  routers.py  schemas.py  utils.py
